<resources>
    <string name="app_name">KotlinLearning</string>
    <string name="settings">Settings</string>
    <string name="zip_code">Zip Code</string>
</resources>
