...
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        tools:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon"
        android:layout_alignTop="@id/icon"
        android:layout_alignBottom="@id/icon"
        android:gravity="center_vertical"
...
